--- a/.dockerignore
+++ b/.dockerignore
@@ -1,50 +1,49 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Git
+.git
+.gitignore
 
-# Virtual environments
-venv/
+# Python
+__pycache__
+*.pyc
+*.pyo
+*.pyd
+.Python
 env/
-ENV/
+pip-log.txt
+pip-delete-this-directory.txt
+.tox
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*,cover
+*.cover
+.hypothesis
+.pytest_cache
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # IDE
-.vscode/
-.idea/
+.vscode
+.idea
 *.swp
 *.swo
 *~
 
-# OS
-.DS_Store
-Thumbs.db
+# Project specific
+downloads/
+*.mp3
+*.mp4
+*.avi
+*.mov
 
-# Git
-.git/
-.gitignore
-
-# Logs
-*.log
-
-# Temporary files
-*.tmp
-*.temp
+# Documentation
+README.md
