--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,24 @@
-# Docker Compose for local development
+# NMG Video to MP3 Converter - Docker Compose
+# Built by Nepal Media Group
+
 version: '3.8'
 
 services:
-  web:
-    build: .
+  nmg-video-to-mp3:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: nmg-video-converter
     ports:
       - "8501:8501"
-    volumes:
-      - ./downloads:/app/downloads
     environment:
       - STREAMLIT_SERVER_HEADLESS=true
       - STREAMLIT_SERVER_PORT=8501
       - STREAMLIT_SERVER_ADDRESS=0.0.0.0
+      - STREAMLIT_BROWSER_GATHER_USAGE_STATS=false
+    volumes:
+      # Optional: Mount a local directory for downloads
+      - ./downloads:/tmp/downloads
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8501/_stcore/health"]
@@ -19,3 +26,12 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    labels:
+      - "app.name=nmg-video-to-mp3"
+      - "app.description=Nepal Media Group Video to MP3 Converter"
+      - "app.url=http://localhost:8501"
+
+# Optional: Create a network for the app
+networks:
+  default:
+    name: nmg-converter-network
