--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 yt-dlp>=2024.7.16
-streamlit>=1.28.0
+streamlit>=1.28.0,<2.0.0
+ffmpeg-python>=0.2.0
+Pillow>=9.0.0
+numpy>=1.21.0
+pandas>=1.3.0
+googletrans==4.0.0rc1
